# Sistema_de_Gestion_de_Pedidos_Psw

./: CMakeLists.txt  README.md  cocinero.h  main.cpp  mesero.h
data/: usuarios.csv
include/: admin.h  cocinero.h  gestionMenu.h  historialVentas.h  informeVentas.h  menuMesero.h  misOrdenes.h  utilidades.h  utils.h
output/: boleta_mesa_10.txt
untitled/mainTanta/: CMakeLists.txt
untitled/mainTanta/include/: login.h  menuAdmin.h  menuMesero.h  misOrdenes.h  utils.h
untitled/mainTanta/scr/: login.cpp  main.cpp
